port part 2 (refactor code base)